[FIX] website_sale: responsive design for mobile does not align button and quantity selector

--- a/addons/website_sale/static/src/css/website_sale.css
+++ b/addons/website_sale/static/src/css/website_sale.css
@@ -309,10 +309,6 @@
   }
 }
 @media (max-width: 500px) {
-  .oe_website_sale .oe_website_spinner {
-    margin: auto;
-  }
-
   .oe_cart table, #modal_optional_products table {
     display: inline-block;
   }
